--- a/package.json
+++ b/package.json
@@ -10,31 +10,24 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@akisaira/eslint-config": "0.0.1-alpha.3",
     "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-solid": "^0.13.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.3.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "solid-devtools": "^0.29.2",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.8",
-    "vite-plugin-monkey": "^3.4.0",
-    "vite-plugin-solid": "^2.7.0",
-    "vite-plugin-solid-svg": "^0.8.0"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "solid-devtools": "^0.30.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vite-plugin-monkey": "^4.0.6",
+    "vite-plugin-solid": "^2.10.2",
+    "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
-    "solid-js": "^1.8.8",
+    "solid-js": "^1.9.3",
     "textarea-caret": "^3.1.0"
   },
   "lint-staged": {
