--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "vite-plugin-solid-svg": "^0.8.1"
   },
   "dependencies": {
-    "solid-js": "^1.9.3",
-    "textarea-caret": "^3.1.0"
+    "solid-js": "^1.9.3"
   },
   "lint-staged": {
     "*.{js,ts,tsx,ts.d}": "eslint --cache --fix",
